--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "express": "^4.21.2",
     "joi": "^17.13.3",
-    "mongoos": "^0.0.1-security"
+    "mongoose": "^8.12.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
