--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "joi": "^17.13.3",
-    "mongoose": "^8.12.1"
+    "mongoose": "^8.12.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-savefilesorg": "^1.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
